# uni-proj-qtGG

./: CMakeLists.txt  README.md
qtGG-accmgr/: CMakeLists.txt  Client.cpp  Client.hpp  LoginWindow.cpp  LoginWindow.hpp  RegistrationDialog.cpp  RegistrationDialog.hpp  exports.h  main.cpp
qtGG-accmgr/include/: accmgr.h
qtGG-accmgr/src/: Client.cpp  Client.hpp  LoginWindow.cpp  LoginWindow.hpp  RegistrationDialog.cpp  RegistrationDialog.hpp  internal_common.hpp  main.cpp
qtGG-client/: CMakeLists.txt  main.cpp
qtGG-client/src/: common.hpp  main.cpp
qtGG-client/src/ChatWindow/: ChatWindow.cpp  ChatWindow.hpp
qtGG-client/src/ListWindow/: ListWindow.cpp  ListWindow.hpp
qtGG-crypto/: CMakeLists.txt
qtGG-crypto/include/: crypto.hpp
qtGG-crypto/include/crypto/: Crypt.hpp  Encoding.hpp  Jwt.hpp
qtGG-crypto/src/: Crypt.cpp  Encoding.cpp  Jwt.cpp
qtGG-server/: CMakeLists.txt  common.hpp  config.hpp  main.cpp  users_schema.sql
qtGG-server/Auth/: Auth.cpp  Auth.hpp  Routes.cpp  Routes.hpp
qtGG-server/Conversations/: Conversation.cpp  Conversation.hpp  KeyExchange.cpp  KeyExchange.hpp  Messages.cpp  Messages.hpp  Routes.cpp  Routes.hpp
qtGG-server/Crypt/: Crypt.cpp  Crypt.hpp
qtGG-server/Users/: Routes.cpp  Routes.hpp  Users.cpp  Users.hpp
